forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app: forgejo
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
